<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RoboLink</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_settings">Settings</string>
    <string name="usb_status">USB Device Status</string>
    <string name="active_channels_label">Active Channels:</string>
    <string name="connection_label">USB Status:</string>
    <string name="log_label">Debug Log</string>
    <string name="led_description">Status Light</string>
    <string name="rc_channels_label">RC Channels</string>
    <string name="switches_label">Switches</string>
    <string name="features_label">Features</string>
    <string name="ping_label">Ping Sensor</string>
    <string name="default_time">0ms</string>
    
    <string name="channel_1_label">1</string>
    <string name="channel_2_label">2</string>
    <string name="channel_3_label">3</string>
    <string name="channel_4_label">4</string>
    <string name="channel_5_label">5</string>
    <string name="channel_6_label">6</string>

    <string name="ping_feature">Ping</string>
    <string name="rc_feature">RC Input</string>
    <string name="sdcard_feature">SD Card</string>
    <string name="ir_feature">IR Sensor</string>
    <string name="accelerometer_feature">Accelerometer</string>
    <string name="switches_feature">Switches</string>
    
    <string name="ping_value">Object not detected.</string>
    <string name="ping_detected">Object detected at</string>
    
</resources>